labs/level3-container-k8s/production-enterprise-platform/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-ecommerce
  labels:
    name: production-ecommerce
    environment: prod
    # Ép buộc toàn bộ Pod trong namespace này phải đạt chuẩn an ninh nghiêm ngặt nhất
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
