labs/level3-container-k8s/production-enterprise-platform/kubernetes/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: production-ecommerce
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  rules:
    - host: web1-stark.dcloud.vn
      http:
        paths:
          # 1. Định tuyến toàn bộ API sang Backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: order-backend-service
                port:
                  number: 5000

          # 2. Định tuyến các trang còn lại sang Frontend Dashboard
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-frontend-service
                port:
                  number: 80
